Removed Routing of CHG and DSG to micro
Removed connections from CHG and DSG to micro

--- a/hardware/BMS_2020/BMS-P00-V00.PcbDoc.htm
+++ b/hardware/BMS_2020/BMS-P00-V00.PcbDoc.htm
@@ -126,17 +126,17 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">28/07/2020</td>
+            <td class="front_matter_column3">24/09/2020</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">5:46:19 PM</td>
+            <td class="front_matter_column3">1:47:21 PM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3"><a href="file://C:\Users\samha\Documents\Altium\QUTMS_BMS_2020\hardware\BMS_2020\BMS-P00-V00.PcbDoc" class="file"><acronym title="C:\Users\samha\Documents\Altium\QUTMS_BMS_2020\hardware\BMS_2020\BMS-P00-V00.PcbDoc">C:\Users\samha\Documents\Altium\QUTMS_BMS_2020\hardware\BMS_2020\BMS-P00-V00.PcbDoc</acronym></a></td>
+            <td class="front_matter_column3"><a href="file://C:\Users\n8888833\OneDrive - Queensland University of Technology\Documents\GitHub\QUTMS_BMS_2020\hardware\BMS_2020\BMS-P00-V00.PcbDoc" class="file"><acronym title="C:\Users\n8888833\OneDrive - Queensland University of Technology\Documents\GitHub\QUTMS_BMS_2020\hardware\BMS_2020\BMS-P00-V00.PcbDoc">C:\Users\n8888833\OneDrive - Queensland University of Technology\Documents\GitHub\QUTMS_BMS_2020\hardware\BMS_2020\BMS-P00-V00.PcbDoc</acronym></a></td>
             </tr>
         </table>
         
