--- a/hardware/BMS_2020/BMS-P00-V01.PcbDoc.htm
+++ b/hardware/BMS_2020/BMS-P00-V01.PcbDoc.htm
@@ -126,12 +126,12 @@
             <tr class="front_matter">
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">17/10/2020</td>
+            <td class="front_matter_column3">18/10/2020</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
-            <td class="front_matter_column3">9:48:30 PM</td>
+            <td class="front_matter_column3">11:07:37 AM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
