--- a/hardware/BMS_2020/BMS-P00-V01.PcbDoc.htm
+++ b/hardware/BMS_2020/BMS-P00-V01.PcbDoc.htm
@@ -127,11 +127,13 @@
             <td class="front_matter_column1">Date</td>
             <td class="front_matter_column2">:</td>
             <td class="front_matter_column3">15/07/2021</td>
+            <td class="front_matter_column3">16/07/2021</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Time</td>
             <td class="front_matter_column2">:</td>
             <td class="front_matter_column3">7:47:47 PM</td>
+            <td class="front_matter_column3">1:13:33 PM</td>
             </tr>
             <tr class="front_matter">
             <td class="front_matter_column1">Filename</td>
